# material_editor

./: .gitignore  CMakeLists.txt  README.md
examples/: example.json  fragment_shader.glsl  vertex_shader.glsl
source/: CMakeLists.txt  main.cpp
source/data/: document.cpp  document.h
source/rendering/: document.cpp  document.h  renderer.cpp  renderer.h  rendering.cpp  rendering.h  resources.cpp  resources.h  shader.cpp  shader.h
